some changes in mobile responsive

--- a/Public/index.html
+++ b/Public/index.html
@@ -47,8 +47,7 @@
                 <a href="#">Challanges</a>
                 <a href="#">Resources</a>
                 <a href="#">Other Links</a>
-                <div class="login">
-                    <a href="#">Sign in</a>
+                <div class="login  login2">
                     <button type="button">Try for free</button>
                 </div>
             </div>
